--- a/src/app/views/app-inicial/app-inicial.component.html
+++ b/src/app/views/app-inicial/app-inicial.component.html
@@ -6,7 +6,7 @@
     <!-- Conteúdo da página -->
   </main>
 
-  <div class="Fundo">
+  <div class="Fundo" style="background-image: url('assets/img/download.jpg');">
   <header class="fiep-header">
     <div class="top-bar">
       <span>Sistema Fiep</span>
@@ -45,7 +45,7 @@
     </header>
 
     
-   
+   <main>
 
    <!-- Janela de chat em estilo WhatsApp -->
 <div class="chat-janela" *ngIf="historicoMensagens.length > 0 || loading">
@@ -58,10 +58,10 @@
     </div>
   </div>
 </div>
+</main>
 
 
-
-  <footer class="fiep-footer">
+  <footer class="fiep-footer"  >
     <div class="footer-columns">
       <div>
         <h4>Áreas de Atuação</h4>
