--- a/src/app/component/fornecedor/fornecedor-create/fornecedor-create.component.html
+++ b/src/app/component/fornecedor/fornecedor-create/fornecedor-create.component.html
@@ -17,6 +17,31 @@
         <mat-form-field>
             <input matInput placeholder="Razão Social" [(ngModel)]="fornecedor.forRazaoSocial" name="forRazaoSocial">
         </mat-form-field>
+
+        <h3>Contato</h3>
+        <mat-form-field>
+          <input matInput placeholder="E-mail" [(ngModel)]="fornecedor.contato.email" name="cliEmail">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Telefone" [(ngModel)]="fornecedor.contato.telefone" name="cliTelefone">
+        </mat-form-field>
+    
+        <h3>Endereço</h3>
+        <mat-form-field>
+          <input matInput placeholder="Rua" [(ngModel)]="fornecedor.endereco.rua" name="rua">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Número" [(ngModel)]="fornecedor.endereco.numero" name="numero">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Cidade" [(ngModel)]="fornecedor.endereco.cidade" name="cidade">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Estado" [(ngModel)]="fornecedor.endereco.estado" name="estado">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="CEP" [(ngModel)]="fornecedor.endereco.cep" name="cep">
+        </mat-form-field>
     </form>
 
     <div style="gap: 10px; display:flex; justify-content:flex-end">
