--- a/src/app/views/app-inicial/app-inicial.component.html
+++ b/src/app/views/app-inicial/app-inicial.component.html
@@ -6,7 +6,7 @@
     <!-- Conteúdo da página -->
   </main>
 
-  <div class="Fundo" style="background-image: url('assets/img/download.jpg');">
+  <div class="Fundo">
   <header class="fiep-header">
     <div class="top-bar">
       <span>Sistema Fiep</span>
