--- a/src/app/component/template/header/header.component.html
+++ b/src/app/component/template/header/header.component.html
@@ -21,3 +21,17 @@
         </a>
     </span>
 </mat-toolbar>
+
+<!-- Barra secundária de login e navegação do usuário -->
+<div class="sub-barra-login">
+  <div class="sub-logo-sistema">
+    <span class="sub-nome-sistema">SENAI | Sistema Fiep</span>
+  </div>
+  <div class="sub-acoes-usuario">
+    <a href="/usuario" class="sub-link">Área do Usuário</a>
+    <a href="/ajuda" class="sub-link">Ajuda</a>
+    <a href="/notificacoes" class="sub-link"><i class="fas fa-bell"></i></a>
+    <a href="/suporte" class="sub-link">Suporte</a>
+    <button class="sub-btn-login">Login</button>
+  </div>
+</div>
