--- a/src/app/views/app-inicial/app-inicial.component.html
+++ b/src/app/views/app-inicial/app-inicial.component.html
@@ -1,4 +1,4 @@
-
+<div class="app-container">
 
   <header class="cabecalho-branco"></header>
 
@@ -60,6 +60,7 @@
 </div>
 </main>
 
+<header class="cabecalho-branco"></header>
 
   <footer class="fiep-footer"  >
     <div class="footer-columns">
@@ -114,4 +115,6 @@
   </footer>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="app-inicial.component.ts"></script>
+</div>
+
 </div>
